--- a/cast1.tex
+++ b/cast1.tex
@@ -255,8 +255,19 @@ rozptyl, výchylka, trénovací rozptyl a priemerná trénovacia chyba,
 v závislosti od veľkosti trénovacej množiny (obrázok \ref{img:train})
 a od zložitosti množiny hypotéz (obrázok \ref{img:hypo}).
 
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.8]{obrazky/krivky1.pdf}
+  \caption{Závislosť chyby algoritmu od počtu trénovacích príkladov $t$.}
+  \label{img:train}
+\end{figure}
 
-\TODO{obrázok kriviek učenia, vysvetlenie}
+\begin{figure}
+  \centering
+  \includegraphics[scale=0.8]{obrazky/krivky2.pdf}
+  \caption{Závislosť chyby algoritmu od zložitosti množiny hypotéz $H$.}
+  \label{img:hypo}
+\end{figure}
 
 
 \paragraph{Technické detaily.}
