--- a/main.tex
+++ b/main.tex
@@ -28,6 +28,7 @@
 \usepackage{graphicx} % obrazky
 \usepackage{subcaption} % \subfigure
 \usepackage{hyperref} % linky
+\usepackage{comment} % \comment
 
 \newcommand{\err}{\mathrm{err}}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
@@ -44,7 +45,9 @@
 
 \newcommand{\vychylka}{\text{\normalfont výchylka}}
 \newcommand{\rozptyl}{\text{\normalfont rozptyl}}
-\newcommand{\chalg}{\text{\normalfont chyba algoritmu}}
+\newcommand{\rozptylt}{\text{\normalfont trénovací rozptyl}}
+\newcommand{\chalg}{\text{\normalfont očakávaná testovacia chyba}}
+\newcommand{\chalgt}{\text{\normalfont očakávaná trénovacia chyba}}
 \newcommand{\penal}{\text{\normalfont pokuta}}
 
 \newcommand{\larr}{\leftarrow}
